<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    android:layout_marginVertical="@dimen/_5sdp"
    android:layout_marginHorizontal="@dimen/_10sdp"
    android:background="@drawable/edit_layout_bg"
    android:padding="@dimen/margin_small">

    <TextView
        android:id="@+id/nounText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/noto_bold"
        android:text="@string/noun"
        android:textAlignment="center"
        android:textColor="@color/bg_primary"
        android:textSize="@dimen/_20ssp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/def_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:fontFamily="@font/noto_sami_bold"
        android:text="@string/definition_text"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/nounText"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/ic_volume"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/def_text"
        app:layout_constraintBottom_toBottomOf="@id/def_text"
        app:layout_constraintStart_toEndOf="@id/def_text"/>

    <TextView
        android:id="@+id/def_text_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:fontFamily="@font/noto_regular"
        android:text="@string/def_text_explain"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintTop_toBottomOf="@id/def_text"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
