<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/edit_bg">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/part_of_speech_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/noto_bold"
            android:textSize="20sp"
            android:textColor="@color/bg_primary"
            tools:text="@string/noun"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/definitions_title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/noto_sami_bold"
            android:text="@string/definition"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/part_of_speech_textview" />

        <ImageView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="TODO"
            android:src="@drawable/ic_volume"
            android:layout_marginHorizontal="@dimen/_10sdp"
            app:layout_constraintTop_toTopOf="@id/definitions_title_textview"
            app:layout_constraintBottom_toBottomOf="@id/definitions_title_textview"
            app:layout_constraintStart_toEndOf="@id/definitions_title_textview"
            />

        <TextView
            android:id="@+id/definitions_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definitions_title_textview"
            tools:text="definition \n\n  another \n\n  third" />

        <TextView
            android:id="@+id/synonyms_title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/synonyms"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/definitions_textview" />

        <TextView
            android:id="@+id/synonyms_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="asad, asaad, asdia, asdajod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synonyms_title_textview" />

        <TextView
            android:id="@+id/antonyms_title_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textStyle="bold"
            android:text="@string/antonyms"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/synonyms_textview" />

        <TextView
            android:id="@+id/antonyms_textview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="asad, asaad, asdia, asdajod"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/antonyms_title_textview" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
