<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="@dimen/_15sdp">

    <ImageView
        android:id="@+id/backButton"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@+id/titleText"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/titleText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sami_bold"
        android:text="@string/history"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/emptyTitleImage"
        android:layout_width="@dimen/_116sdp"
        android:layout_height="@dimen/_116sdp"
        android:visibility="invisible"
        android:src="@drawable/ic_empty_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emptyTitleText" />

    <TextView
        android:id="@+id/emptyTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_history"
        android:textSize="24sp"
        android:visibility="invisible"
        android:textColor="@color/black"
        android:fontFamily="@font/noto_sami_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_history"
        android:textSize="16sp"
        android:visibility="invisible"
        android:textColor="@color/black"
        android:fontFamily="@font/noto_regular"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyTitleText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/historyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
        android:visibility="visible"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/titleText" />
</androidx.constraintlayout.widget.ConstraintLayout>
