<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:paddingVertical="@dimen/_15sdp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/noto_sami_bold"
        android:text="@string/favorite_title"
        android:textColor="@color/black"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/back_icon"
        app:layout_constraintBottom_toBottomOf="@+id/titleText"
        android:layout_marginLeft="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="@id/titleText"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/emptyFavImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_empty_fav"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/emptyTitleText"
        />

    <TextView
        android:id="@+id/emptyTitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_favorite"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:visibility="gone"
        android:fontFamily="@font/noto_sami_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emptyDescText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_favorite_history"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:fontFamily="@font/noto_regular"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emptyTitleText" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/translateTextRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginHorizontal="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/titleText"
        android:paddingBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
