<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="350dp"
        android:layout_height="280dp"
        android:layout_marginVertical="@dimen/_10sdp"
        android:background="@drawable/edit_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/Image"
            android:layout_width="66dp"
            android:layout_height="68dp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:src="@drawable/image_exit"
            app:layout_constraintBottom_toTopOf="@+id/text_exit_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_exit_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/text_exit_app"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp"
            app:fontFamily="@font/noto_bold"
            app:layout_constraintEnd_toEndOf="@+id/Image"
            app:layout_constraintStart_toStartOf="@+id/Image"
            app:layout_constraintTop_toBottomOf="@+id/Image" />


        <TextView
            android:id="@+id/yes"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:background="@drawable/drawable_bg"
            android:fontFamily="@font/noto_sami_bold"
            android:gravity="center"
            android:text="@string/yes"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/text_exit_app"
            app:layout_constraintStart_toStartOf="@+id/text_exit_app"
            app:layout_constraintTop_toBottomOf="@+id/text_exit_app"

            />


        <TextView
            android:id="@+id/discard"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:background="@drawable/drawable_bg2"
            android:fontFamily="@font/noto_sami_bold"
            android:gravity="center"
            android:text="@string/no"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/yes"
            app:layout_constraintStart_toStartOf="@+id/yes"
            app:layout_constraintTop_toBottomOf="@+id/yes"
            app:strokeWidth="1dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>